updating to 1.20